--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,18 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#1f6fd0",
-        "activityBar.activeBorder": "#ee90bb",
+        "activityBar.background": "#164a8e",
+        "activityBar.activeBorder": "#e13e85",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#ee90bb",
-        "activityBarBadge.foreground": "#15202b",
-        "titleBar.activeBackground": "#1857a4",
-        "titleBar.inactiveBackground": "#1857a499",
+        "activityBarBadge.background": "#e13e85",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "titleBar.activeBackground": "#0f3362",
+        "titleBar.inactiveBackground": "#0f336299",
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveForeground": "#e7e7e799",
-        "statusBar.background": "#1857a4",
-        "statusBarItem.hoverBackground": "#1f6fd0",
+        "statusBar.background": "#0f3362",
+        "statusBarItem.hoverBackground": "#164a8e",
         "statusBar.foreground": "#e7e7e7"
     },
-    "peacock.color": "#1857a4"
+    "peacock.color": "#0f3362"
 }
