--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "server": "nodemon index.js",
-    "test": "jest --watch"
+    "test": "cross-env NODE_ENV=development jest --watch"
   },
   "jest": {
     "testEnvironment": "node"
@@ -30,6 +30,8 @@
     "bcryptjs": "^2.4.3",
     "connect-session-knex": "^1.5.0",
     "cors": "^2.8.5",
+    "cross-env": "^6.0.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "helmet": "^3.21.2",
